prevent scrolling on mobile

--- a/mainStyle.css
+++ b/mainStyle.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
   background-image: url(canvas/scenery-morning.svg);
@@ -11,6 +15,7 @@ body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   color: #445c7f;
   overflow-x: hidden;
+  max-width: 100vw;
 }
 
 nav {
@@ -402,7 +407,8 @@ h1 {
   }
 
   #logo {
-    width: 60px;
+    width: 50px;
+    margin: 5px 0 0 5px;
   }
 
   #about {
@@ -411,6 +417,10 @@ h1 {
 
   #about p {
     width: 100%;
+  }
+
+  #bus-container {
+    display: none;
   }
 
   #profile-pic {
